note-ports/wine/wine-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: wine-ingress
  namespace: ingress-nginx
spec:
  defaultBackend:
    service:
      name: wine-service
      port:
        number: 8086
  ingressClassName: nginx
  rules:
    - host: wine.mylabs.com
  tls:
    - hosts:
        - wine
      secretName: bar-tls
status:
  loadBalancer:
    ingress:
      - ip: 192.168.9.129
      - ip: 192.168.9.130
